Fixed notification display on small screens

--- a/src/components/Notification/style.css
+++ b/src/components/Notification/style.css
@@ -51,3 +51,20 @@
     padding: 1rem;
     text-shadow: 0 1px 0 #CCCCCC, 0 2px 0 #c9c9c9;
 }
+
+@media only screen and (max-width: 425px) {
+    .notification-container h3{
+        font-size: 1rem;
+    }
+
+    .notification-container .buttons .accept,.notification-container .buttons  .deny{
+        font-size: 1em;
+        width: 50%;
+        padding: .5rem;
+        font-size: 1.7rem;
+    }
+
+    .notification-container h1, h2{
+        font-size: 1.5em !important;
+    }
+}
